test_prisma_log.txt
(node:19320) [MODULE_TYPELESS_PACKAGE_JSON] Warning: Module type of file:///C:/Users/0912w/.gemini/antigravity/scratch/worklog-app/test_prisma.ts is not specified and it doesn't parse as CommonJS.
Reparsing as ES module because module syntax was detected. This incurs a performance overhead.
To eliminate this warning, add "type": "module" to C:\Users\0912w\.gemini\antigravity\scratch\worklog-app\package.json.
(Use `node --trace-warnings ...` to show where the warning was created)
file:///C:/Users/0912w/.gemini/antigravity/scratch/worklog-app/test_prisma.ts:3
import { Pool } from 'pg'
         ^^^^
SyntaxError: Named export 'Pool' not found. The requested module 'pg' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:

import pkg from 'pg';
const { Pool } = pkg;

    at ModuleJob.#asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at processTicksAndRejections (node:internal/process/task_queues:104:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)
